test/src/e2e_vm_tests/test_programs/should_pass/test_abis/find_associated_methods_library/src/main.sw
library find_associated_methods_library;

abi MyContract {
    #[storage(read)]
    fn test_function() -> bool;
}
