test/src/e2e_vm_tests/test_programs/should_fail/abi_impl_purity_mismatch/src/main.sw
contract;

abi MyContract {
    #[storage(read)]
    fn test_function() -> bool;
}

impl MyContract for Contract {
    #[storage(write)]
    fn test_function() -> bool {
        true
    }
}
